feat: update & delete users (integrate db)
