# main.go
@@ -17,7 +17,6 @@ package main
 
 import (
 	"database/sql"
-	"fmt"
 	"log"
 	"net/http"
 	"strconv"
@@ -34,15 +33,12 @@ type User struct {
 	ID    int    `json:"id"`
 	Name  string `json:"name"`
 	Email string `json:"email"`
-	// Age     int    `json:"age"`
-	// Address string `json:"address"`
 }
 
 type ErrorResponse struct {
 	Message string `json:"message"`
 }
 
-var users = []User{}
 var db *sql.DB
 
 func main() {
@@ -51,14 +47,17 @@ func main() {
 	e := echo.New()
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 	e.GET("/users", getUsers)
-	e.GET("/users/:id", getUserByID)
 	e.POST("/users", createUser)
+	e.GET("/users/:id", getUserByID)
+	e.PUT("/users/:id", updateUser)
+	e.DELETE("/users/:id", deleteUser)
 
 	e.Start(":8080")
 }
 
 func connectToDatabase() *sql.DB {
-	connStr := "postgres://milhamsuryapratama:@localhost:5432/postgres?sslmode=disable"
+	// connStr := "postgres://milhamsuryapratama:@localhost:5432/postgres?sslmode=disable"
+	connStr := "postgres://ighfarhasbiash:@localhost:5432/meeting_rooms_sk?sslmode=disable" // Koneksi ke db di local Hasbi
 	db, err := sql.Open("postgres", connStr)
 	if err != nil {
 		log.Fatal(err)
@@ -82,25 +81,24 @@ func createUser(c echo.Context) error {
 		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Invalid request payload"})
 	}
 
-	tx, err := db.Begin()
+	tx, err := db.Begin() // Mulai transaksi
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
 	}
 
-	_, err = tx.Exec("INSERT INTO users (name, email) VALUES ($1, $2)", "Test Transaction 3", "Test Transaction 3")
+	// insert data ke dalam tabel user_try dan kembalikan ID yang dihasilkan
+	var lastInsertID int
+	err = tx.QueryRow("INSERT INTO user_try (name, email) VALUES ($1, $2) RETURNING id", newUser.Name, newUser.Email).Scan(&lastInsertID)
+	// Ambil data user yang baru saja dimasukkan
+	err = tx.QueryRow("SELECT id, name, email FROM user_try WHERE id = $1", lastInsertID).Scan(&newUser.ID, &newUser.Name, &newUser.Email)
+
+	// Jika terjadi error saat insert atau mengambil data, rollback transaksi
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
+		tx.Rollback()                                                                      // Rollback jika terjadi error
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()}) // Kembalikan pesan error ke client
 	}
 
-	_, err = tx.Exec("INSERT INTO users (name, email) VALUES ($1, $2)", "Test Transaction 3", "Test Transaction 3")
-	if err != nil {
-		tx.Rollback()
-		fmt.Println("Error inserting user:", err)
-		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
-	}
-
-	tx.Commit()
-	fmt.Println("User created successfully:", newUser)
+	tx.Commit() // Commit transaksi
 
 	return c.JSON(http.StatusCreated, newUser)
 }
@@ -122,12 +120,21 @@ func getUserByID(c echo.Context) error {
 		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Invalid user ID"})
 	}
 
-	for _, user := range users {
-		if user.ID == IDInt {
-			return c.JSON(http.StatusOK, user)
+	// Query untuk mengambil data user berdasarkan ID
+	data := db.QueryRow("SELECT id, name, email FROM user_try WHERE id = $1", IDInt)
+
+	var user User
+	err = data.Scan(&user.ID, &user.Name, &user.Email) // Scan data ke dalam struct User
+	if err != nil {
+		// Jika tidak ditemukan, kembalikan 404 Not Found
+		if err == sql.ErrNoRows {
+			return c.JSON(http.StatusNotFound, ErrorResponse{Message: "User not found"})
 		}
+		// Jika terjadi error lain, kembalikan 500 Internal Server Error
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
 	}
-	return c.JSON(http.StatusNotFound, ErrorResponse{Message: "User not found"})
+
+	return c.JSON(http.StatusOK, user)
 }
 
 // @Summary Get all users
@@ -139,15 +146,13 @@ func getUserByID(c echo.Context) error {
 // @Failure 404 {object} ErrorResponse
 // @Router /users [get]
 func getUsers(c echo.Context) error {
-	rows, err := db.Query("SELECT * FROM users")
+	rows, err := db.Query("SELECT id, name, email FROM user_try")
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: "Error retrieving users"})
 	}
-	// defer db.Close()
-	defer rows.Close()
 
 	var usersFromDB []User
-	for rows.Next() {
+	for rows.Next() { // Iterasi setiap baris hasil query
 		var user User
 		if err := rows.Scan(&user.ID, &user.Name, &user.Email); err != nil {
 			return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: "Error scanning user data"})
@@ -159,4 +164,91 @@ func getUsers(c echo.Context) error {
 	}
 
 	return c.JSON(http.StatusOK, usersFromDB)
+}
+
+// @Summary Update user by ID
+// @Description Update user details by user ID
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Param user body User true "User object"
+// @Success 200 {object} User
+// @Failure 404 {object} ErrorResponse
+// @Failure 400 {object} ErrorResponse
+// @Router /users/{id} [put]
+func updateUser(c echo.Context) error {
+	var updatedUser User
+	if err := c.Bind(&updatedUser); err != nil {
+		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Invalid request payload"})
+	}
+	id := c.Param("id")
+	IDInt, err := strconv.Atoi(id)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Invalid user ID"})
+	}
+	// Mulai transaksi
+	tx, err := db.Begin()
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
+	}
+	// Update data user berdasarkan ID
+	result, err := tx.Exec("UPDATE user_try SET name = $1, email = $2 WHERE id = $3", updatedUser.Name, updatedUser.Email, IDInt)
+	// Ambil data user yang baru saja diupdate
+	err = tx.QueryRow("SELECT id, name, email FROM user_try WHERE id = $1", IDInt).Scan(&updatedUser.ID, &updatedUser.Name, &updatedUser.Email)
+
+	// Cek apakah ada baris yang terpengaruh
+	if rowsAffected, _ := result.RowsAffected(); rowsAffected == 0 {
+		// Jika tidak ada baris yang terpengaruh, berarti user tidak ditemukan
+		return c.JSON(http.StatusNotFound, ErrorResponse{Message: "User not found"})
+	}
+
+	// Jika terjadi error saat update atau mengambil data, rollback transaksi
+	if err != nil {
+		tx.Rollback() // Rollback jika terjadi error
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
+	}
+	tx.Commit() // Commit transaksi
+	return c.JSON(http.StatusOK, updatedUser)
+}
+
+// @Summary Delete user by ID
+// @Description Delete user by user ID
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Success 204
+// @Failure 404 {object} ErrorResponse
+// @Failure 400 {object} ErrorResponse
+// @Router /users/{id} [delete]
+func deleteUser(c echo.Context) error {
+	id := c.Param("id")
+	IDInt, err := strconv.Atoi(id)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Invalid user ID"})
+	}
+
+	// Mulai transaksi
+	tx, err := db.Begin()
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
+	}
+
+	// Hapus data user berdasarkan ID
+	result, err := tx.Exec("DELETE FROM user_try WHERE id = $1", IDInt)
+	// Cek apakah ada baris yang terpengaruh
+	if rowsAffected, _ := result.RowsAffected(); rowsAffected == 0 {
+		// Jika tidak ada baris yang terpengaruh, berarti user tidak ditemukan
+		return c.JSON(http.StatusNotFound, ErrorResponse{Message: "User not found"})
+	}
+
+	// Jika terjadi error saat delete, rollback transaksi
+	if err != nil {
+		tx.Rollback() // Rollback jika terjadi error
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
+	}
+	tx.Commit() // Commit transaksi
+
+	return c.NoContent(http.StatusNoContent)
 }
